Added font style

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h1{
 #reset-btn{
     padding: 0.8rem;
     font-size: 1.25rem;
-    background-color: #01200F;
+    background-color:#5a6d90;
     border-radius: 1rem;
     border: none;
     color: #fff;
